﻿Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

### 2018-04-22
	Changed: How empty watchlist is detected.
### 2018-04-22
	Fixed: Retarded WinForms bug.
### 2018-04-18
	Added: Health monitor now warns of low diskspace. Defaults to 150 MB.
	Added: Experimental feature to resize detected apps. Usable as `Resize={Top,Left,Width,Height}` in Watchlist.ini.
	Added: `Remember size=true/false` and `Remember position=true/false` in Watchlist.ini to control the `Resize` option.
	Fixed: Removing a rule did not do proper cleanup, causing rule with similar options to not work correctly without restart.
### 2018-04-17
	Added: Option to disable showing TM in taskbar. Found in Configuration > Behaviour in main window menubar.
### 2018-04-16
	Added: Core.ini option `Immediate configuration saving`, which instead of marking configs for saving on exit, immediately saves them. Disabled by default.
	Changed: Status bar now includes touch count since launch and uses proper labels instead of whatever garbage it was before.
	Fixed: Resizing from window borders now works for main window.
### 2018-04-15
	Added: Extra debug relating to restarting TM.
	Added: Change log started. Older entries are based on scarce notes.
	Fixed: Event log being resized to very small size would hide it behind the above tab element.
### 2018-04-13
	Fixed: Some foreground process debug output.
### 2018-04-12
	Fixed: Unspecified log output fixes.
### 2018-04-11
	Fixed: Main window resizing now works properly. Most noticeable with the event log.
### 2018-04-10
	Changed: Reduced non-debug output.

## 2018-04-09 First Itch.io release; Version 0.9
	Added: Itch.io link.
	Changed: Moving some output to debug.

### 2018-04-05
	Changed: Unspecified log output corrected.
### 2018-04-03
	Fixed: Processing count drift.
### 2018-04-01
	Fixed: Affinity not being set under certain conditions.
### 2018-04-01