@@ -1,6 +1,8 @@
 ﻿Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
+### 2018-04-23
+	Fixed: Error at HealthMonitor.cs:380 when foreground monitor was disabled.
 ### 2018-04-22
 	Changed: How empty watchlist is detected.
 ### 2018-04-22
